# wabash-v2

./: .gitignore  README.md
backend/: .env.example  pyproject.toml  railway.json  requirements.txt  wabash_v2.db
backend/app/: attribute_seeds.py  config.py  domain_blocklist.py  main.py  run.py
backend/app/adapters/: brave_answers.py  firecrawl_agent.py  firecrawl_client.py  llm_clients.py  openai_research.py  parallel_research.py  perplexity_agent.py  serpapi_client.py
backend/app/api/: admin_attributes.py  auth.py  match.py  research.py
backend/app/models/: db.py  schemas.py
backend/app/observability/: run_usage.py  usage_extract.py
backend/app/reports/: cost.py
backend/app/research/: attribute_matcher.py  attribute_researcher.py  engines.py  json_utils.py  markdown_cleaner.py  matcher.py  prompts.py  ranker.py  scorer.py  scrape_limits.py  searcher.py
backend/app/workflow/: llm_router.py
backend/tests/: test_attribute_matcher.py  test_brave_answers.py  test_firecrawl_agent.py  test_json_utils.py  test_markdown_cleaner.py  test_matcher_prefilter.py  test_openai_research.py  test_parallel_research.py  test_perplexity_agent.py  test_prompts.py  test_ranker.py  test_research_run.py  test_searcher_prefilter.py
examples/: example1.md  example2.md  example3.md  example4.md  example5.md  example6.md  example7.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: MatchResults.tsx  ResearchResults.tsx
frontend/src/pages/: Attributes.tsx  (+3 more)
(+1 files in other folders)
